[package]
name = "dmfg-embedded-graphics-polygon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-graphics = "0.7.1"
embedded-graphics-core = "0.3.3"
itertools = "0.10.5"
nalgebra = { version = "0.32.2", optional=true }

[dev-dependencies]
embedded-graphics-simulator = "0.4.1"
rand = "0.8.5"
colored = "2.0.0"

[features]
3d = ["dep:nalgebra"]